# dungeon-master-ai-project_v2

./: .gitignore  LICENSE  README.md  find_gioco_rpg_imports.py  fix_imports.py  fix_multiple_imports.py  guida_migrazione_eventbus.md  main.py  migrazione_routes_eventbus.md  package-lock.json  package.json  requirements.txt  salvataggio.json  server_output_completo.txt  server_output_log.txt  standardize_data.py  start_gioco.bat  struttura_progetto.md  temp_file.txt
gioco_rpg/: README.md  README_MAPPE.md  main.py  pyproject.toml  requirements.txt  run_tests.bat  server.py  server_log.txt  test_importazione.py
gioco_rpg/assets/: manifest.json  manifest.msgpack
gioco_rpg/client/: App.css  App.js
gioco_rpg/core/: data_manager.py  events.py  game.py  io_interface.py
gioco_rpg/docs/: event_bus_guide.md  sistema_asset.md
gioco_rpg/entities/: entita.py  giocatore.py  nemico.py  npg.py
gioco_rpg/frontend/: .env  README.md  package-lock.json  package.json  webpack.config.js
gioco_rpg/items/: accessorio.py  arma.py  armatura.py  item_base.py  item_factory.py  oggetto.py  oggetto_interattivo.py  pozione.py
gioco_rpg/server/: __init__.py  api_diagnostics.py  app.py
gioco_rpg/states/: __init__.py  base_state.py  menu.py  prova_abilita.py  scelta_mappa_state.py  stato_esempio_grafico.py
gioco_rpg/systems/: movement_system.py
gioco_rpg/test/: README.md  __init__.py  api_combat_test.py
gioco_rpg/tests/: test_taverna.py
gioco_rpg/tools/: diagnostica_json.py  valida_mappe_oggetti.py
gioco_rpg/util/: asset_manager.py  asset_tools.py  class_registry.py  config.py  (+8 more)
(+373 files in other folders)
