[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gioco_rpg"
version = "0.1.0"
description = "Un gioco di ruolo modulare con backend Python e frontend React"
readme = "README.md"
authors = [
    {name = "fedefreak92", email = "example@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask==2.0.1",
    "flask-socketio==5.3.6",
    "flask-cors==3.0.10",
    "python-engineio==4.5.1",
    "python-socketio==5.8.0",
    "eventlet==0.39.1",
    "werkzeug==2.0.2",
    "jinja2==3.0.3",
    "itsdangerous==2.0.1",
    "click==8.0.3",
    "markupsafe==2.0.1",
    "bidict==0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.0.0",
    "pytest-cov==3.0.0",
    "black==22.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
]

[tool.setuptools]
package-dir = {"" = ""}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100 